# stock-analyzer-tool

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main-ci.yml
notebook/: notebook_advance_finance_analysis.ipynb
src/analyzer/: stock_analyzer.py
src/data_io/: data_fetcher.py
src/stockana/: calc_advance_indicator.py  calc_cross_asset.py  calc_market_condition.py  calc_time_based.py  candlestick_pattern.py
src/stockana/analyzer/: correlation_analyzer.py  moving_average_analyzer.py
src/stockana/data_io/: base.py  data_fetcher.py
src/store/: companies.py
tests/: test_calc_advance_indicator.py  test_calc_cross_asset.py  test_calc_market_condition.py  test_calc_time_based.py  test_candlestick_pattern.py
tests/test_analyzer/: test_stock_analyzer.py
tests/test_data_io/: test_data_fetcher.py
