[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = "--cov=src"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["__init__.py"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true

[tool.mypy.overrides]
module = "src.stockana.calc_advance_indicator"
disallow_untyped_defs = false