[metadata]
name = stock-analyzer
version = 0.1.0
description = A Backend tool to analysis stock price
author = PenHsuanWang
license = MIT
license_file = LICENSE
platforms = linux, osx
classifiers =
    Programming Language :: python :: 3
    Programming Language :: python :: 3 :: Only
    Programming Language :: python :: 3.10
    Programming Language :: python :: 3.11

[options]
install_requires =
    requests>=2
python_requires = >=3.10
package_dir =
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>3.9
    tox>=3.24

[flake8]
max-line-length = 160

